<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.activity.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/detailBackground"
                android:layout_width="0dp"
                android:layout_height="360dp"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/detailGoBack"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/default_value"
                android:layout_marginTop="36dp"
                android:contentDescription="@string/todo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_arrow_back"
                app:tint="#FFFFFF" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="@+id/detailBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/separator" />

            <ImageView
                android:id="@+id/detailPoster"
                android:layout_width="160dp"
                android:layout_height="240dp"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/todo"
                android:elevation="10dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="@+id/detailBackground"
                app:layout_constraintStart_toStartOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="8dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="50dp"
                app:layout_constraintBottom_toBottomOf="@+id/detailBackground"
                app:layout_constraintEnd_toEndOf="parent">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/detailFavorite"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lottie_autoPlay="false"
                    app:lottie_fileName="animations/favorite.json"
                    app:lottie_loop="false"
                    app:lottie_speed="1.25" />
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingTop="12dp"
            android:paddingEnd="24dp"
            android:paddingBottom="48dp">

            <TextView
                android:id="@+id/detailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="Godzilla Vs. Kong" />

            <TextView
                android:id="@+id/detailGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_light"
                tools:text="Action | Adventure" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:baselineAligned="false"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/detailRatingBar"
                    style="?android:attr/ratingBarStyleIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:max="5"
                    android:theme="@style/RatingBar"
                    android:transformPivotX="0dp"
                    android:transformPivotY="0dp" />

                <TextView
                    android:id="@+id/detailRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="#FFAB40"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    tools:text="7.9" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/max_rating"
                    android:textColor="@android:color/secondary_text_light" />
            </LinearLayout>

            <TextView
                android:id="@+id/detailOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textColor="@android:color/secondary_text_light"
                tools:text="bla bla bla" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>