<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/moviesFragment"
        android:title="@string/movies"
        android:icon="@drawable/ic_movies"/>

    <item
        android:id="@+id/TVFragment"
        android:title="@string/tv_series"
        android:icon="@drawable/ic_tv"/>

    <item
        android:id="@+id/favoriteFragment"
        android:title="@string/favorite"
        android:icon="@drawable/ic_favorite"/>

</menu>