<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".presentation.fragment.TVFragment">

    <ProgressBar
        android:id="@+id/tvLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="72dp"
        android:layout_height="72dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tvRV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_value"
        tools:listitem="@layout/list_item" />
</androidx.constraintlayout.widget.ConstraintLayout>